// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Menu Left menu 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    align="flex-start"
    className="sc-ftvSup sc-iAvgwm dXLSAb bwcUnG"
  >
    <span
      className="sc-ciZhAO iTkbQp"
      data-element="menuWrapper"
    >
      <button
        appearance="primary-ghost"
        className="sc-bczRLJ sc-eCYdqJ eJlJy iokKVj"
        data-element="button"
        onMouseUp={[Function]}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-ftvSup cwlfiu"
          gap={0.75}
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Menu Right menu 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    align="flex-end"
    className="sc-ftvSup sc-iAvgwm dXLSAb kNxNkt"
  >
    <span
      className="sc-ciZhAO iTkbQp"
      data-element="menuWrapper"
    >
      <button
        appearance="primary-ghost"
        className="sc-bczRLJ sc-eCYdqJ ERNDu kswtPl"
        data-element="button"
        icon="settings"
        onMouseUp={[Function]}
        size="medium"
        variant="medium"
      />
    </span>
  </div>
</div>
`;
